# cpp-python

./: .gitignore  README.md  test.sh
cpp/: CMakeLists.txt
cpp/lib/: CMakeLists.txt  patient.cpp
oop-example/: CMakeLists.txt  base.cpp  base.h  data.cpp  data.h  main.py  patient.cpp  patient.h
python/: main.py
simple-example/cpp/: CMakeLists.txt
simple-example/cpp/lib/: CMakeLists.txt  patient.cpp
